    	arbitrary number of persons, and gains a 'role' argument to
    	specify person roles using a controlled vocabulary (the MARC
    	relator terms).

    o	Package 'utils' adds a new "bibentry" class for representing and
        manipulating bibliographic information in enhanced BibTeX
        style, unifying and enhancing the previously existing
        mechanisms.


DEPRECATED & DEFUNCT

    o	Supplying the parser with a string containing both octal/hex and
	Unicode escapes is now an error.

    o	File extension .C for C++ code files in packages is now defunct.


PACKAGE INSTALLATION

    o	install.packages() has a new argument 'libs_only' to optionally
	pass --libs-only to INSTALL and works analogously for Windows
	binary installs (to add support for 64- or 32-bit Windows).

    o	When sub-architectures are in use, the installed architectures
	are recorded in the 'Archs' field of the DESCRIPTION file.
	There is a new default filter, "subarch", in
	available.packages() to make use of this.

	Code is compiled in a copy of the 'src' directory when a
	package is installed for more than one sub-architecture: this
	avoid problems with cleaning the sources between building
	sub-architectures.

    o	R CMD INSTALL --libs-only no longer overrides the setting of
	locking, so a previous version of the package will be restored
	unless --no-lock is specified.


UTILITIES

    o	R CMD Rprof|build|check are now based on R rather than Perl
	scripts.  The only remaining Perl scripts are the rarely used
	R CMD Sd2Rd, install-info.pl (used only if install-info is
	not found) and some maintainer-mode-only scripts.

    o	R CMD check has a new argument --extra-arch to confine tests
	to those needed to check an additional sub-architecture.

	R CMD check's check for "Subdirectory 'inst' contains no files"
	is more thorough: it looks for files, and warns if there are
	only empty directories.

	'check' configuration files have changed format: they are now