@@ -22,7 +22,7 @@ Rd2HTML(Rd, out = "", package = "", defines = .Platform$OS.type,
 
 Rd2txt(Rd, out = "", package = "", defines = .Platform$OS.type,
        stages = "render", outputEncoding = "",
-       width = getOption("help_text_width", 80L), ...)
+       options, ...)
 
 Rd2latex(Rd, out = "", defines = .Platform$OS.type,
          stages = "render", outputEncoding = "ASCII", ...,
@@ -46,8 +46,7 @@ Rd2ex(Rd, out = "", defines = .Platform$OS.type,
       Used by \command{R CMD \link{Rdconv}}.}
   \item{Links, Links2}{\code{NULL} or a named (by topics) character vector of
     links, as returned by \code{\link{findHTMLlinks}}.}
-  \item{width}{The intended page width (in characters) for which the
-      text rendering should be designed.}
+  \item{options}{An optional named list of options to pass to \code{\link{Rd2txt_options}}.}
   \item{...}{ additional parameters to pass to \code{\link{parse_Rd}} when
     \code{Rd} is a filename. }
   \item{writeEncoding}{should \verb{\inputencoding} lines be written in
@@ -88,6 +87,11 @@ Rd2ex(Rd, out = "", defines = .Platform$OS.type,
   (Directional quotes are not attempted in CJK locales as they are
   usually double-width, which looks wrong with English text.)
 #endif
+
+  Various aspects of formatting by \code{Rd2txt} are controlled by the
+  \code{options} argument, documented with the \code{\link{Rd2txt_options}}
+  function. Changes made using \code{options} are temporary, those
+  made with \code{\link{Rd2txt_options}} are persistent.
 }
 \section{Encodings}{
   Rd files are normally intended to be rendered on a wide variety of
